Fri May 25 17:56:41 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* sound.c, show.c, gtkoptions.c: fix small sound setting problem

Wed May 23 22:44:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* render.c: malloc more space for the labels to avoid crashes on small
	board sizes.

Wed May 23 17:12:54 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* file.c, file.h, Makefile.am, backgammon.h, export.c, export.h,
	gnubg.c, gtkfile.c, gtkgame.c, html.c, import.c, import.h, sgf.h: move
	some import/export/load/save functions for consistency. New files
	file.[ch] to allow the new cl command "import auto".

Fri May 18 21:02:50 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* openurl.c: small win32 improvement

Thu May 17 21:35:00 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* util.c: win32 fixes

Thu May 17 15:53:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, gtkwindows.c, progress.c: fix problem with
	DIALOG_FLAG_NOTIDY not being used. Make sure that the parent of the
	dialog is present.

	* util.c, board3d/matrix.c, board3d/matrix.h: compiler warnings

Mon May 14 12:21:13 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* util.[ch]: new files. Keeps the common parts of the ugly fixes of
	the util programs in one place.

Mon May 14 01:18:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* makehyper.c: rename WriteFile to WriteHyperFile to avoid conflict
	with windows.h

Mon May 14 01:10:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, set.c: Fix problems in SetupLang

Tue May  8 02:22:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, rollout.c: solved problem with calibration widget causing
	crash. Modality disabled, because of an unresolved issue.
	DIALOG_FLAG_NOTIDY is unused??

Mon May  7 23:29:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: fix problem with lang settings not being loaded.
	* po/: now fuzzy matching, since po files are ill maintained.
